Gestion des liens dans le corps de la réponse via un Provider ContainerResponseFilter
