# src/main/resources/openApi3Commandes.yml
@@ -66,8 +66,19 @@ paths:
             application/xml:
               schema:
                 $ref: "#/components/schemas/Commande"
+          links:
+            getCommandeById:  
+              operationId: getCommande
+              parameters:
+                identifiant: '$response.body#/components/schemas/Commande/identifiant'
+              description: >
+                Utilisation de l'identifiant retournée dans la réponse pour pouvoir consulter la commande par son identifiant avec `GET /commandes/{identifiant}`.
         "400":
           description: Echec de crÃ©ation, donnÃ©es invalides
+          links:
+            aideUsageApi:
+              operationRef: 'http://aide.api.ventes/index.html'
+
   /commandes/{identifiant}:
     get:
       tags:
@@ -75,6 +86,27 @@ paths:
       summary: Consultation d'une commande
       description: Fournit les informations de la commande Ã  partir de son identifiant
       operationId: getCommande
+      parameters:
+        - name: identifiant
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "204":
+          description: delete ok sans content
+          links:
+            getToutesCommandes:  
+              operationId: getCommandes
+              description: Liste complète des commandes.          
+        "404":
+          description: Identificant commande inconnu
+    delete:
+      tags:
+        - Gestion des commandes
+      summary: Suppression d'une commande
+      description: supression de la commande Ã  partir de son identifiant
+      operationId: deleteCommande
       parameters:
         - name: identifiant
           in: path
@@ -91,9 +123,12 @@ paths:
             application/xml:
               schema:
                 $ref: "#/components/schemas/Commande"
+          links:
+            getToutesCommandes:  
+              operationId: getCommandes
+              description: Liste complète des commandes.          
         "404":
           description: Identificant commande inconnu
-
 components:
   schemas:
     Identifiant:
